<resources>
    <string name="title_drawer_uploadsettings">Upload settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">GPSLogger</string>
    <string name="settings_screen_name">GPSLogger Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="could_not_write_to_file">Could not write to file</string>
    <string name="add_description">Add a description</string>
    <string name="letters_numbers">Use only letters and numbers</string>
    <string name="gps_network_not_enabled">gps_network_not_enabled</string>
    <string name="open_location_settings">open_location_settings</string>
    <string name="menu_annotate">Annotate</string>
    <string name="menu_share">Share</string>
    <string name="menu_exit">Exit</string>
    <string name="txt_latitude">Latitude:</string>
    <string name="txt_longitude">Longitude:</string>
    <string name="txt_altitude">Altitude:</string>
    <string name="txt_speed">Speed:</string>
    <string name="txt_direction">Direction:</string>
    <string name="txt_satellites">Satellites:</string>
    <string name="txt_accuracy">Accuracy:</string>
    <string name="txt_travel_distance">Travelled:</string>
    <string name="btn_start_logging">Start Logging</string>
    <string name="btn_stop_logging">Stop Logging</string>
    <string name="gpslogger_still_running">GPSLogger is still running.</string>
    <string name="summary_loggingto">Logging to:</string>
    <string name="summary_loggingto_screen">screen only</string>
    <string name="summary_freq_every">Frequency:</string>
    <string name="summary_freq_max">maximum</string>
    <string name="summary_dist">Distance:</string>
    <string name="summary_dist_regardless">maximum</string>
    <string name="summary_current_filename">File:</string>
    <string name="sharing_location_only">Location only</string>
    <string name="sharing_mylocation">My location</string>
    <string name="sharing_googlemaps_link" formatted="false">http://maps.google.com/maps?q=%s,%s</string>
    <string name="sharing_via">Share via</string>
    <string name="foot">&#160;foot</string>
    <string name="feet">&#160;feet</string>
    <string name="meter">&#160;meter</string>
    <string name="meters">&#160;meters</string>
    <string name="error">Error</string>
    <string name="error_connection">Connection Error. Please check your phone settings.</string>
    <string name="seconds">&#160;s</string>
    <string name="minutes">&#160;min</string>
    <string name="hours">&#160;hrs</string>
    <string name="gpsprovider_unavailable">No GPS provider available. Please check your location settings and enable a  location provider.
    </string>
    <string name="started">Started</string>
    <string name="providername_gps">GPS satellites</string>
    <string name="providername_celltower">cell towers</string>
    <string name="not_applicable">n/a</string>
    <string name="meters_per_second">&#160;m/s</string>
    <string name="feet_per_second">&#160;ft/s</string>
    <string name="miles_per_hour">&#160;mi/h</string>
    <string name="miles">&#160;mi</string>
    <string name="kilometers_per_hour">&#160;km/h</string>
    <string name="kilometers">&#160;km</string>
    <string name="unknown_direction">unknown</string>
    <string name="sorry">Sorry</string>
    <string name="success">Yay!</string>
    <string name="direction_roughly">Roughly %s</string>
    <string name="direction_north">North</string>
    <string name="direction_northnortheast">North by Northeast</string>
    <string name="direction_northeast">Northeast</string>
    <string name="direction_eastnortheast">East by Northeast</string>
    <string name="direction_east">East</string>
    <string name="direction_eastsoutheast">East by Southeast</string>
    <string name="direction_southeast">Southeast</string>
    <string name="direction_southsoutheast">South by Southeast</string>
    <string name="direction_south">South</string>
    <string name="direction_southsouthwest">South by Southwest</string>
    <string name="direction_southwest">Southwest</string>
    <string name="direction_westsouthwest">West by Southwest</string>
    <string name="direction_west">West</string>
    <string name="direction_westnorthwest">West by Northwest</string>
    <string name="direction_northwest">Northwest</string>
    <string name="direction_northnorthwest">North by Northwest</string>
    <string name="time_onesecond">1 second</string>
    <string name="time_halfminute">&#189; minute</string>
    <string name="time_oneminute">1 minute</string>
    <string name="time_onehour">1 hour</string>
    <string name="time_quarterhour">15 minutes</string>
    <string name="time_halfhour">&#189; hour</string>
    <string name="time_oneandhalfhours">1&#189; hours</string>
    <string name="time_twoandhalfhours">2&#189; hours</string>
    <string name="time_hms_format" formatted="false">%sh %sm %ss</string>
    <string name="accuracy_within" formatted="false">within %s %s</string>
    <string name="degree_symbol">&#176;</string>
    <string name="settings_distance_in_meters">Distance in meters</string>
    <string name="settings_accuracy_in_meters">Accuracy in meters</string>
    <string name="settings_enter_meters">Enter meters(max 9999)</string>
    <string name="pref_logging_title">Logging details</string>
    <string name="log_gpx_title">Log to GPX</string>
    <string name="log_gpx_summary">Logs locations to a GPX v1.0 file</string>
    <string name="log_kml_title">Log to KML</string>
    <string name="log_kml_summary">Logs locations to a KML v2.2 file</string>
    <string name="log_plain_text_title">Log to Plain Text</string>
    <string name="log_plain_text_summary">Logs locations to a CSV file</string>
    <string name="new_file_creation_title">New file creation</string>
    <string name="new_file_creation_summary">Whether to create a new file once a day or each time you start.</string>
    <string name="new_file_creation_onceaday">Once a day</string>
    <string name="new_file_creation_everystart">Every time I start</string>
    <string name="new_file_creation_custom">Custom file</string>
    <string name="new_file_custom_title">Custom file name</string>
    <string name="new_file_custom_summary">You can use your own file name.
        Optionally add a few dynamic parameters such as serial number, year, hour, minute, etc. Very dynamic file names
        may not work well with auto send features because it only sends the latest file.</string>
    <string name="pref_performance_title">Performance</string>
    <string name="pref_performance_summary">Timings, filters and listeners</string>
    <string name="time_before_logging_title">Time before logging</string>
    <string name="time_before_logging_summary">Use 0 for maximum frequency, but slower is better for battery life.
    </string>
    <string name="time_before_logging_dialog_title">Time in seconds</string>
    <string name="time_before_logging_hint">Enter seconds (max 9999)</string>
    <string name="keep_fix_summary">Be careful, this will dramatically decrease the battery life. Use only for
        higher precision with low frequencies.
    </string>
    <string name="keep_fix_title">Keep GPS on between fixes</string>
    <string name="retry_time_title">Retry time interval for accuracy filter</string>
    <string name="retry_time_summary">After acquiring a fix, keep retrying for this long to get an accurate point to match the accuracy filter setting.</string>
    <string name="retry_time_dialog_title">Time in seconds</string>
    <string name="retry_time_hint">Enter seconds (max 9999)</string>
    <string name="display_imperial_title">Display Imperial units</string>
    <string name="display_imperial_summary">Display feet, miles and pints, none of that newfangled metric stuff. (Preferences must still be in metrics)</string>
    <string name="enabledisablegps_title">Enable/Disable GPS</string>
    <string name="enabledisablegps_summary">Go to the phone settings to enable or disable the providers.</string>
    <string name="startonbootup_title">Start on bootup</string>
    <string name="startonbootup_summary">Launch app and start logging when phone starts</string>
    <string name="startonapplaunch_title">Start on app launch</string>
    <string name="startonapplaunch_summary">Start logging when the app is launched</string>
    <string name="autoemail_title">Email</string>
    <string name="autoemail_summary">Automatically emails the log file to an address of your choice</string>
    <string name="please_wait">Please wait.</string>
    <string name="autoemail_target">Target email addresses</string>
    <string name="autosend_frequency_display">After %s minutes</string>
    <string name="autoemail_frequency_whenistop">When I press stop</string>
    <string name="autoemail_smtp_category">Email Settings</string>
    <string name="autoemail_username">Username</string>
    <string name="autoemail_username_summary">Username with your email provider</string>
    <string name="autoemail_password">Password</string>
    <string name="autoemail_password_summary">Password with your email provider</string>
    <string name="autoemail_port">Port</string>
    <string name="autoemail_port_summary">SMTP Port</string>
    <string name="autoemail_ssl">Use SSL?</string>
    <string name="autoemail_ssl_summary">Try toggling this if you cannot connect</string>
    <string name="autoemail_server">SMTP Server</string>
    <string name="autoemail_server_summary">Hostname of the SMTP server to use</string>
    <string name="autoemail_choosepreset">Mail Provider</string>
    <string name="autoemail_choosepreset_summary">Pick a provider or choose manual</string>
    <string name="autoemail_smtp_testemail">Test email</string>
    <string name="autoemail_test">Send a test email using the above settings</string>
    <string name="autoemail_sendingtest">Sending a test email</string>
    <string name="autoemail_testresult_success">Email was sent</string>
    <string name="autoemail_invalid_form">Invalid values</string>
    <string name="autoemail_invalid_form_message">Please ensure that all of the fields have been filled in properly
    </string>
    <string name="fix_obtained">Fix obtained</string>
    <string name="started_waiting">GPS started, waiting for fix</string>
    <string name="gps_stopped">GPS paused</string>
    <string name="stopped">Stopped</string>
    <string name="osm_setup_title">OpenStreetMap</string>
    <string name="osm_setup_summary">Set tags, description, visibility and authorization for uploading GPS Traces
    </string>
    <string name="osm_lbl_authorize">Authorize this app</string>
    <string name="osm_lbl_authorize_description">You will need to grant this app permissions in order to upload GPS
        traces to OpenStreetMap. You can set tags, descriptions and visibility here after you have authorized this app.
    </string>
    <string name="osm_upload">OpenStreetMap</string>
    <string name="osm_resetauth">Clear authorization</string>
    <string name="debuglog_title">Write to debug file</string>
    <string name="debuglog_summary">Writes debug messages to a file on the SD card. Warning: The file grows very fast.
    </string>
    <string name="pref_gpsvisualizer">Visualize GPS log stats and graphs</string>
    <string name="tip_coffee">Buy me a coffee</string>
    <string name="hide_notification_buttons">Hide notification buttons</string>
    <string name="hide_notification_buttons_summary">You will need to restart GPSLogger for this setting to take effect</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="debuglog_attach_to_email">Attach debug log to email</string>
    <string name="debuglog_attach_to_email_summary">Attaches debug log to an email along with some diagnostic information</string>
</resources>